fix topcities alignment

--- a/src/components/topcities/index.css
+++ b/src/components/topcities/index.css
@@ -15,15 +15,23 @@
 }
 
 .city_card_container {
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25%, 1fr));
     column-gap: 1rem;
-    row-gap: 1rem;
+    row-gap: 1rem; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.top_city_card{
+    margin: 1rem 1rem;
 }
 
 .close_icon{
     text-align: right;
 }
+
 
 @media screen and (max-width: 768px) {
     .city_card_container {
